# Sentinel-AI

./: Dockerfile  LICENSE  README.md  config.yaml  docker-compose.casaos-single.yml  docker-compose.ghcr.yml  docker-compose.yml  docker-publish.yml  main.py  pyproject.toml
frontend/: docker-compose.casaos.yml  index.html  nginx.conf  package.json
frontend/src/: main.jsx  styles.css
src/macro_sentinel/: __init__.py  analysis.py  api.py  app.py  llm_clients.py  models.py
src/macro_sentinel/core/: config.py  logging.py
src/macro_sentinel/fetchers/: __init__.py  rss.py  storage.py
src/macro_sentinel/notifiers/: __init__.py  base.py  discord.py  factory.py  formatting.py  telegram.py  whatsapp.py
tests/: test_config.py  test_storage.py
